# nure

./: README.md
3/coursework/src/: .envrc  .gitignore  Cargo.toml  README.md  compose.yaml
3/coursework/src/app/authentication/: Cargo.toml
3/coursework/src/assets/: compose.yaml
3/coursework/src/assets/init/: 1-data.sql  init.sql
3/coursework/src/data/: Cargo.toml
3/coursework/src/data/.sqlx/: query-014cf2ec55142a17047ad7c469685df75ae8e3c95a1a7c6c21be7b5624a82ae1.json  query-063059de083c42956506d991bc04472929e6b2618ab13eb90e772ad9bd9c1984.json  query-0af939868e37bad5eb9097badeaefca62c247c4b2265a9667c4b33885126c771.json  query-0bb7353d64231dc12416f5504d94513493670e3f2ae017d87a2f0c3eca045f60.json  query-346beb83d6351740a503b72133a190ac327ae79f6e555def8fec89fcc75fb015.json  query-3ffe9168c1eb30bb54c65055314655c21f03d04973e4291e6d4b6c7847364659.json  query-404747d44ee859e8c967695c29963594bb8273e66c053934ec20d5fc3db9d41e.json  query-68ed36ae997fff190b4b15b80bf24b553d8ac922da251d9e8b8f4e897bab46b0.json  query-695f4b0a4286cf625dc60dc3dfc4a9cd92aaea3ea58ef8702903983cfc32ab47.json  query-6b6f842d169e2a9628474edcd6dad10878bb9aaa612f62080d40ba24682b0c3b.json  query-7cc4cf73572c0830d1da7b8e621a79a09f3e3d8cfd42d3946bd1fac93838b913.json  query-7f06016e9892486c938a5e94c9e5f70903a38ed314235712c28ac5e14d9ac20f.json  query-8af7a0169e934cb82997a1cab04e921f719ed9466c13713fda8736c540d0fa78.json  query-8be76176b46f645095dce3bcbed11134ec0f43504d3a820698282848fd67dbad.json  query-8bfaca937858ed1060da5a650f749849d29af3d6345d0e02474abf4d8c78b89d.json  query-93ec7d124c9bfa7329478d975614db874788ed297fe2d95275592becb186f942.json  query-944eb40633e943a75244dee639fe6efb16919aff7172189c81240cb12462ae58.json  query-9be7f66630e64787e55946dff428d28035747b66e57260bc9cd4634a71a037a6.json  query-9fa86328c40ce0469f755efb4876010092b7bc9f240a5d43dc69f9d0b1b5b7ce.json  query-b5814b93236d587957a103e61726b0b9ae811ba6bff0617871e76de3ef0ff662.json  query-c1abf048d65d421717f20343bb0ef4fcd78f8571cfe2347c147124763bd17491.json  query-cc8f7e13c6aedf6aa4d6d4fc39db7aa98b84baf911e7f779641c1dc514c676cd.json  query-cf79e2f6038dddd055d535d2c41dd8dccd1a4e6a763963590c904c25abf33137.json  query-d289747c7c7fba86e2b66174e2d1546f10e8213d36b6b3cd25016f829e9d731b.json  query-d474dd848d0ef8832afd4d1302fa562a3c4a4569032e8636d664043b5dc96661.json  query-daf98e6f1013c4993f7329f6fa690e92bccd89d1ff90131719c40626088dabd1.json  (+3 more)
3/coursework/src/data/src/: adapter.rs  lib.rs  (+3 more)
3/coursework/src/database/: Cargo.toml  compose.yaml
3/coursework/src/service/: Cargo.toml
3/coursework/src/sql/: 1-data.sql
3/coursework/src/src/: authentication.rs  input.rs  login.rs  main.rs  register.rs  search.rs  widget.rs
3/coursework/src/view/: Cargo.toml
5/srbd/car-shop/: .envrc  Cargo.toml  README.md
5/srbd/car-shop/.sqlx/: query-18bc9a21e37b709a1c8e1c44ba0a4a39384259c4c95614f9cd5e0a5a2e664acc.json  query-68249964aad245e918e19eedc27bb3d75e6420b7a781c996b923a11522f69974.json  query-68883bb841693d9048b9edda2bd7985477ee9805ef5a936fc119e8e9fbfdf46b.json  query-6f4fefe2d6ee0a7cacf8a254237ba5cd660dfeacb1546e2c70f01805683d23f5.json  query-9f3b5a02886911ff1ae8a737e82645e25ec069b1595007d63e4e9f5700dbf6cc.json  query-b119502f9f01931da6dcfb2b961766ce87213fa0c7395e6cded9d06a50ee15c2.json  query-bee7ed2d30442907abf4fb9f156036bbc1bc5b7cd6b28889384298e47877276f.json
5/srbd/car-shop/frontend/: App.tsx  constants.ts  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
5/srbd/car-shop/sql/: init.sql
5/srbd/car-shop/src/: cars.rs  error.rs  main.rs  not-needed.rs  sales.rs
(+147 files in other folders)
