[package]
name = "car-shop"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48", features = ["full"] }

axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors"] }
utoipa-axum = "0.2"
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

rust_decimal = "1.39"
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls",
  "postgres",
  "chrono",
  "rust_decimal",
] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
listenfd = "1.0"
