[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.11"
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "from", "into"] }
garde = { version = "0.22.0", features = ["email", "url", "derive"] }

chrono = { version = "0.4.39", default-features = false, features = [
    "std",
    "now",
] }
sqlx = { version = "0.8.3", default-features = false, features = [
    "mysql",
    "macros",
    "chrono",
    "runtime-tokio",
] }
