[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.11"
argon2 = { version = "0.5.3", features = ["std"] }
garde = { version = "0.22.0", features = ["email", "url", "derive"] }
derive_more = { version = "1.0.0", features = ["deref", "deref_mut", "into"] }

[dependencies.data]
path = "../data"
